--- a/.github/workflows/android.yaml
+++ b/.github/workflows/android.yaml
@@ -25,7 +25,7 @@ jobs:
         uses: android-actions/setup-android@v3
 
       - name: Make Gradle executable
-        run: chmod +x ./gradlew
+        run: cd lynx-android && chmod +x ./gradlew
 
       - name: Build Debug APK
         run: cd lynx-android && ./gradlew clean assemble
