--- a/.github/workflows/android.yaml
+++ b/.github/workflows/android.yaml
@@ -38,3 +38,8 @@ jobs:
 
       - name: Build Debug APK
         run: cd lynx-android && ./gradlew clean assemble
+
+      - name: Check Apk
+        run: |
+          unzip -v lynx-android/app/build/outputs/apk/debug/app-debug.apk | grep assets
+          unzip -v lynx-android/app/build/outputs/apk/release/app-release-unsigned.apk | grep assets
